major update on nav, mobileview, cart, category, item list

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -176,6 +176,111 @@ time, mark, audio, video {
 
 }
 
+/* =======================contact start====================== */
+
+
+.slide_one{
+  position: relative;
+  height: 100vh !important;
+  width: 100% !important;
+  background-position: center !important;
+  background-size: cover !important;
+  z-index: -99;
+  overflow: hidden;
+  -webkit-background-attachment: fixed !important;
+  background-attachment: fixed !important;
+}
+.overlay{
+  position: absolute;
+  text-align: center;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 99;
+  overflow: hidden;
+}
+
+.overlay_content{
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  z-index: 2;
+}
+
+.overlay_content h2{
+  color: #fff;
+  font-family: 'Cera Pro Bold';
+  text-transform: uppercase;
+  font-size: 45px;
+  font-weight: 700;
+  letter-spacing: 2px;
+}
+
+.email_phone li{
+  list-style-type: none !important;
+  font-family: 'Cera Pro Regular';
+  color: #fff;
+  font-size: 18px;
+  letter-spacing: 1px;
+  line-height: 18px;
+padding: 5px 0px;
+  cursor: pointer;
+}
+
+.social_media_icon li{
+  list-style-type: none;
+  display: inline-block;
+}
+
+.social_media_icon li i{
+  height: 35px;
+  width: 35px;
+  color: #cb241b;
+  line-height: 32px;
+  background-color: #fff;
+  margin: 0px 5px;
+  border: 1px solid #fff;
+  border-radius: 50%;
+  transition: .5s;
+}
+
+.follow h4{
+  color: #fff;
+  font-family: 'Cera Pro Regular';
+}
+
+/*.form-control{*/
+/*  outline: none !important;*/
+/*  box-shadow:none !important;*/
+/*  !* height: 45px !important; *!*/
+/*  font-family: 'Cera Pro Regular' !important;*/
+/*  border: 1px solid #cb241b !important;*/
+/*  border-radius: 2px !important;*/
+/*}*/
+.contact_btn{
+  height: 45px !important;
+  border-radius: 2px !important;
+}
+.feedback-bg h2{
+  font-size: 25px;
+  font-family: 'Cera Pro Regular' !important;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 700;
+  color: #cb241b ;
+}
+@media(max-width:575px){
+  .overlay_content h2{
+    font-size: 30px;
+  }
+  .email_phone li{
+    font-size: 12px;
+  }
+}
+
+/* =======================contact end====================== */
+
 /*========================================== sidebar part start============================*/
 .closeSidebar{
     position: absolute;
@@ -316,6 +421,7 @@ time, mark, audio, video {
     position: absolute;
     bottom: 10%;
     width: 100%;
+    z-index: 999;
     background-color: #eeeeee;
 }
 
@@ -10435,4 +10541,43 @@ footer.coffee .newletter .newletter_input button:focus {
     .error-404 .normal-btn {
         margin-bottom: 60px;
     }
+}
+
+
+
+
+  .custom_category{
+    text-align: center;
+    border-radius: 4px;
+    height: 60px;
+    transition: all .5s linear;
+    -webkit-box-shadow: 0px 2px 21px -3px rgba(209,209,209,1);
+    -moz-box-shadow: 0px 2px 21px -3px rgba(209,209,209,1);
+    box-shadow: 0px 2px 21px -3px rgba(209,209,209,1);
+  }
+
+.custom_category:hover{
+  box-shadow: none !important;
+}
+.icons{
+  height: 40px;
+  width: 40px;
+}
+.icons img{
+  height: 100%;
+  width: 100%;
+}
+.inner_item p{
+  font-size: 18px;
+  font-family: 'Cera Pro regular';
+  color: #636363;
+}
+
+.categori_heading h2{
+  font-size: 25px;
+  font-weight: 700;
+  color: #484848;
+  letter-spacing: 1px;
+  font-family: 'Cera Pro regular';
+  text-transform: uppercase;
 }
