--- a/templates/shop/shop_checkout.html
+++ b/templates/shop/shop_checkout.html
@@ -223,13 +223,13 @@
                                     <h5 style="text-align: center" >Your Order</h5 >
                                 </div >
                                 <div class="card-body " style="margin-top:-20px " >
-                                    <div class="cart-total_block" style="font-size: x-large" >
+                                    <div class="cart-total_block" style="font-family: Cera Pro Regular" >
                                         <table class="table" >
                                             <colgroup >
                                                 <col span="1" style="width: 50%" >
                                                 <col span="1" style="width: 50%" >
                                             </colgroup >
-                                            <tbody style=" font-family: Arial, Helvetica, sans-serif; font-weight: bold" >
+                                            <tbody  >
                                             <tr style=" height: 70px;" >
                                                 <th style="width: 40%;text-align: left" >SUBTOTAL</th >
                                                 <td >{{ object.get_total }}</td >
