--- a/static/assets/css/adjusted_style.css
+++ b/static/assets/css/adjusted_style.css
@@ -83,8 +83,9 @@
 *************************************/
 
 .container{
-	max-width: 1366px !important;
+	max-width: 1366px;
 }
+
 /************************************
 	Product Promotion
 *************************************/
@@ -169,3 +170,41 @@
 }
 
 /* ends */
+
+/*
+Responsive navigation bar
+*/
+
+@media only screen and (max-width: 760px){
+	.vertical-nav li:hover .sub-menu{
+	left: 0%;
+	margin-top: 12.5px;	
+	position: relative;
+	box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.1);	
+	animation: linear;
+	animation-name: left-to-right;
+	animation-duration: .5s;
+}
+
+.sub-menu li
+{
+    top: 0;
+    width: 100%;
+    min-width: 180px;
+    z-index:1;
+}
+
+@keyframes left-to-right {
+    0% { top: 00%;}
+    100%{ top : 20%;}
+}
+
+/* hide border */
+header .navigation-filter .department-menu_block .department-dropdown-menu ul {
+    width: 100%;
+    padding: 14px;
+    background-color: #fff;
+    border: none;
+}
+
+}
