--- a/templates/shop/nav_footer.html
+++ b/templates/shop/nav_footer.html
@@ -3,11 +3,10 @@
     {% load static %}
     {% load cart_template_tags %}
     <style >
-
         .flashbtn {
             text-align: center;
             margin-bottom: -10px;
-            width: 150px;
+            width: 200px;
             height: 35px;
             background: linear-gradient(to left top, rgb(252, 243, 227) 50%, rgba(250, 234, 209, 0.95) 50%);
             border-style: none;
@@ -126,13 +125,13 @@
     </style >
     <header class="coffee-2" >
         <nav class="navigation d-flex align-items-center fixed-top" style="padding: 10px;  background-color: whitesmoke" >
-            <div class="container" >
+            <div class="container" style="padding: 0px" >
                 <div class="row" >
                     <div class="col-2" ><a class="logo" href="{% url 'shop:home' %}" ><img src="{% static 'assets/images/logo.png' %}" alt="" ></a >
                     </div >
                     <div class="col-7" >
                         <div class="navgition-menu d-flex align-items-center justify-content-center" >
-                            <ul class="mb-0" style="margin-left: 200px">
+                            <ul class="mb-0"  >
                                 <li class="toggleable" ><a class="menu-item active" href="{% url 'shop:home' %}" >Home</a ></li >
                                 {#                                <li class="toggleable" ><a class="menu-item" href="shop_grid%2blist_3col.html" >Shop</a >#}
                                 {#                                    <ul class="sub-menu shop d-flex" >#}
@@ -163,19 +162,19 @@
                                         <li >Coming Soon</li >
                                     </ul >
                                 </li >
-                                <li class="toggleable" ><a class="menu-item" href="" >About us</a >
-                                    <ul class="sub-menu" >
-                                        <li >Coming Soon</li >
-                                    </ul >
+                                <li class="toggleable" ><a class="menu-item" href="{% url 'shop:about_us' %}" >About us</a ></li >
+                                <li class="toggleable" ><a class="menu-item" href="{% url 'shop:contact_us' %}" >Contact us</a ></li >
+                                <li class="toggleable" ><a class="menu-item flashbtn" href="{% url 'shop:cattle-shop' %}" >কোরবানি
+                                                                                                                           স্পেশাল<span ></span ><span ></span ><span ></span ><span ></span ></a >
                                 </li >
-                                <li class="toggleable" ><a class="menu-item flashbtn" href="{% url 'shop:cattle-shop' %}" >ঈদ স্পেশাল<span></span><span></span><span></span><span></span></a ></li >
                             </ul >
                         </div >
                     </div >
                     <div class="col-3" >
                         {% if user.is_authenticated %}
                             <div class="product-function d-flex align-items-center justify-content-end" >
-                                <div id="wishlist" ><a class="function-icon icon_heart_alt" href="#" style="color:#cb241b; "><span style="margin-left: 2px; font-size: 12px" > 0</span ></a >
+                                <div id="wishlist" ><a class="function-icon icon_heart_alt" href="#" style="color:#cb241b; " ><span
+                                        style="margin-left: 2px; font-size: 12px" > 0</span ></a >
                                 </div >
                                 <div id="cart" ><a class="function-icon icon_bag_alt"
                                                    style="color:#cb241b; " href="{% url 'shop:order-summary' %}" ><span
@@ -225,59 +224,42 @@
                                 <button class="no-round-btn" id="mobile-menu--closebtn" >Close menu</button >
                                 <div class="mobile-menu_items" >
                                     <ul class="mb-0 d-flex flex-column" >
-                                        <li class="toggleable" ><a class="menu-item active" href="index.html" >Home</a ><span
-                                                class="sub-menu--expander" ><i class="icon_plus" ></i ></span >
+                                        <li class="toggleable" ><a class="menu-item active" href="{% url 'shop:home' %}" >Home</a ></li >
+                                        <li class="toggleable" ><a class="menu-item" href="" >Blog</a >
                                             <ul class="sub-menu" >
-                                                <li ><a href="index.html" >Homepage 1</a ></li >
-                                                <li ><a href="homepage02.html" >Homepage 2</a ></li >
-                                                <li ><a href="homepage03.html" >Homepage 3</a ></li >
-                                                <li ><a href="homepage04.html" >Homepage 4</a ></li >
-                                                <li ><a href="homepage05.html" >Homepage 5</a ></li >
+                                                <li >Coming Soon</li >
                                             </ul >
                                         </li >
-                                        <li class="toggleable" ><a class="menu-item" href="shop_grid%2blist_3col.html" >Shop</a ><span
-                                                class="sub-menu--expander" ><i class="icon_plus" ></i ></span >
-                                            <ul class="sub-menu" >
-                                                <li ><a href="shop_grid%2blist_fullwidth.html" >Shop grid fullwidth</a ></li >
-                                                <li ><a href="shop_grid%2blist_fullwidth.html" >Shop list fullwidth</a ></li >
-                                                <li ><a href="shop_grid%2blist_3col.html" >shop grid 3 column</a ></li >
-                                                <li ><a href="shop_grid%2blist_3col.html" >shop list 3 column</a ></li >
-                                                <li ><a href="shop_detail.html" >shop detail</a ></li >
-                                                <li ><a href="shop_detail_fullwidth.html" >shop detail fullwidth</a ></li >
-                                                <li ><a href="shop_checkout.html" >checkout</a ></li >
-                                                <li ><a href="shop_order_complete.html" >order complete</a ></li >
-                                                <li ><a href="shop_wishlist.html" >wishlist</a ></li >
-                                                <li ><a href="shop_compare.html" >compare</a ></li >
-                                                <li ><a href="shop_cart.html" >cart</a ></li >
-                                            </ul >
+                                        <li class="toggleable" ><a class="menu-item" href="{% url 'shop:about_us' %}" >About us</a >
+                                        <li class="toggleable" ><a class="menu-item" href="{% url 'shop:contact_us' %}" >Contact us</a >
                                         </li >
-                                        <li class="toggleable" ><a class="menu-item" href="blog_list_sidebar.html" >Blog</a ><span
-                                                class="sub-menu--expander" ><i class="icon_plus" ></i ></span >
-                                            <ul class="sub-menu" >
-                                                <li ><a href="blog_list_sidebar.html" >Blog List Sidebar</a ></li >
-                                                <li ><a href="blog_grid_2col.html" >Blog Grid 2 column</a ></li >
-                                                <li ><a href="blog_grid_sidebar.html" >Blog Grid sidebar</a ></li >
-                                                <li ><a href="blog_masonry.html" >Blog masonry</a ></li >
-                                                <li ><a href="blog_grid_1col.html" >Blog Grid 1 column sidebar</a ></li >
-                                                <li ><a href="blog_detail_sidebar.html" >Blog detail sidebar</a ></li >
-                                            </ul >
-                                        </li >
-                                        <li class="toggleable" ><a class="menu-item" href="#" >Pages</a ><span class="sub-menu--expander" ><i
-                                                class="icon_plus" ></i ></span >
-                                            <ul class="sub-menu" >
-                                                <li ><a href="login.html" >login</a ></li >
-                                                <li ><a href="register.html" >register</a ></li >
-                                                <li ><a href="faq.html" >FAQ</a ></li >
-                                                <li ><a href="coming_soon.html" >coming soon</a ></li >
-                                                <li ><a href="about_us.html" >about us</a ></li >
-                                                <li ><a href="contact_us.html" >contact us</a ></li >
-                                                <li ><a href="404_error.html" >404 error</a ></li >
-                                            </ul >
+                                        <li class="toggleable" ><a class="menu-item flashbtn" href="{% url 'shop:cattle-shop' %}"
+                                                                   style="max-height: 30px" >কোরবানি
+                                                                                             স্পেশাল<span ></span ><span ></span ><span ></span ><span ></span ></a >
                                         </li >
                                     </ul >
                                 </div >
                                 <div class="mobile-login" >
-                                    <h2 >My account</h2 ><a href="login.html" >Login</a ><a href="register.html" >Register</a >
+                                    {% if user.is_authenticated %}
+                                        <div id="mobile-menu_items" >
+                                            <a class=" " href="#" style="color:#cb241b; " >My Favorite<span
+                                                    style="margin-left: 2px; font-size: 12px" > 0 Items</span ></a >
+                                        </div >
+                                        <br >
+                                        <div id="mobile-menu_items" >
+                                            <a style="color:#cb241b; " href="{% url 'shop:order-summary' %}" >My Cart <span
+                                                    style="margin-left: 0px;font-size: 12px" >{{ request.user|cart_item_count }} Items</span ></a >
+                                        </div >
+                                        &nbsp;&nbsp;&nbsp;&nbsp;
+                                        <div >
+                                            <a class="function-icon " href="/accounts/logout" >Log out</a >
+                                        </div >
+                                    {% else %}
+                                        <div id="mobile-menu_items" ><a class="function-icon fa-sign-in"
+                                                                        href="/accounts/signup" ><span >Signup</span ></a ></div >
+                                        <div id="mobile-menu_items" ><a class="function-icon "
+                                                                        href="/accounts/login" ><span >Login</span ></a ></div >
+                                    {% endif %}
                                 </div >
                                 <div class="mobile-social" ><a href="#" ><i class="fab fa-facebook-f" > </i ></a ><a href="#" ><i
                                         class="fab fa-twitter" ></i ></a ><a href="#" ><i class="fab fa-invision" > </i ></a ><a href="#" ><i
@@ -306,7 +288,7 @@
 {% block footer %}
 
     <footer class="coffee" >
-        <div class="container" >
+        <div class="container" style="border-top: 1px solid #d5d3d3; padding-top: 20px;">
             <div class="row" >
                 <div class="col-12 col-sm-12 col-md-4 text-sm-center text-md-left" >
                     <div class="footer-logo" ><img src="{% static 'assets/images/logo.png' %}" alt="" ></div >
@@ -327,9 +309,9 @@
                         <div class="col-12 col-sm-4 text-sm-center text-md-left" >
                             <div class="footer-quicklink" >
                                 <h5 >Infomation</h5 >
-                                <a href="about_us.html" >About us</a >
-                                <a href="checkout.html" >Check out</a >
-                                <a href="contact.html" >Contact</a >
+                                <a href="{% url 'shop:about_us' %}" >About us</a >
+                                <a href="{% url 'shop:checkout' %}" >Check out</a >
+                                <a href="{% url 'shop:contact_us' %}" >Contact</a >
                             </div >
                         </div >
                         <div class="col-12 col-sm-4 text-sm-center text-md-left" >
@@ -343,9 +325,9 @@
                         <div class="col-12 col-sm-4 text-sm-center text-md-left" >
                             <div class="footer-quicklink" >
                                 <h5 >Quick Shop</h5 >
-                                <a href="about_us.html" >About us</a >
-                                <a href="checkout.html" >Check out</a >
-                                <a href="contact.html" >Contact</a >
+                                <a href="{% url 'shop:about_us' %}" >About us</a >
+                                <a href="{% url 'shop:checkout' %}" >Check out</a >
+                                <a href="{% url 'shop:contact_us' %}" >Contact</a >
                             </div >
                         </div >
                     </div >
