--- a/templates/shop/shop_item_list.html
+++ b/templates/shop/shop_item_list.html
@@ -7,17 +7,44 @@
     <head >
         <title >Somikoron | {{ s }}</title >
     </head >
-    <link rel="stylesheet" href="../../../code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" >
     <body >
     <div id="main" >
-        <header class="coffee-2" >
-            <div class="navigation-filter" style="margin-top: 65px" >
+        <header class="coffee-2" style="margin-top: 65px !important;" >
+            <div class="navigation-filter" >
                 <div class="container" >
                     <div class="row" >
-                        <div class="col-12 col-md-12 col-lg-12 col-xl-12 order-1 order-md-2" >
+                        <div class="col-12 col-md-4 col-lg-4 col-xl-3 order-2 order-md-1" >
+                            <div class="department-menu_block" >
+                                <div class="department-menu d-flex justify-content-between align-items-center" ><i class="fas fa-bars" ></i >All
+                                                                                                                                             departments<span ><i
+                                            class="arrow_carrot-down" ></i ></span ></div >
+                                <div class="department-dropdown-menu" >
+                                    <ul >
+                                        <!-- Nested div for requirement -->
+                                        <div class="vertical-nav" >
+                                            {% for cat in categories %}
+                                                <li ><a href="" ><i
+                                                        class="icon-{{ forloop.counter }}" ></i >{{ cat.category_name }}</a >
+                                                    <i class="fa fa-chevron-right float-right" aria-hidden="true" ></i >
+                                                    {% if cat.subcategory_set.count     > 0 %}
+                                                        <ul class="sub-menu" >
+                                                            {% for subcat in cat.subcategory_set.all %}
+                                                                <li ><a href="{{ subcat.get_absolute_url }}" > <i
+                                                                        class="icon-2" ></i >{{ subcat.sub_category_name }}</a ></li >
+                                                            {% endfor %}
+                                                        </ul >
+                                                    {% endif %}
+                                                </li >
+                                            {% endfor %}
+                                        </div >
+                                    </ul >
+                                </div >
+                            </div >
+                        </div >
+                        <div class="col-12 col-md-8 col-lg-8 col-xl-9 order-1 order-md-2" >
                             <div class="website-search" >
                                 <div class="row no-gutters" >
-                                    <div class="col-0 col-md-0 col-lg-4 col-xl-3" style="background-color: #cb241b; color: white" >
+                                    <div class="col-0 col-md-0 col-lg-4 col-xl-3" >
                                         <div class="filter-search" >
                                             <div class="categories-select d-flex align-items-center justify-content-around" >
                                                 <span >All Categories</span ><i class="arrow_carrot-down" ></i ></div >
@@ -32,11 +59,17 @@
                                     </div >
                                     <div class="col-8 col-md-8 col-lg-5 col-xl-7" >
                                         <div class="search-input" >
-                                            <input class="no-round-input no-border" type="text" placeholder="What do you need" >
+                                            <form id="search-form" action="{% url 'search:searchitems' %}" method="GET"
+                                                  value="{{ request.GET.q }}" >
+                                                <input class="no-round-input no-border" type="text" name="q" value="{{ request.GET.q }}"
+                                                       placeholder="What do you need" />
+                                            </form >
                                         </div >
                                     </div >
                                     <div class="col-4 col-md-4 col-lg-3 col-xl-2" >
-                                        <button class="no-round-btn" >Search</button >
+                                        <button class="no-round-btn coffee" type="submit" name="submit" value="Search"
+                                                onclick="document.getElementById('search-form').submit();" >Search
+                                        </button >
                                     </div >
                                 </div >
                             </div >
@@ -45,7 +78,6 @@
                 </div >
             </div >
         </header >
-        <!-- End header-->
         <div class="ogami-breadcrumb" >
             <div class="container" >
                 <ul >
