--- a/templates/master.html
+++ b/templates/master.html
@@ -1,6 +1,6 @@
 {% load static %}
-{% load cart_template_tags %}
-<!doctype html>
+<!--{% load cart_template_tags %}-->
+
 <html lang="en" >
 <head >
     <meta charset="UTF-8" >
